--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 61nav
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Leslie
+language: zh-CN
 timezone: ''
 
 # URL
