--- a/source/_data/云游四海.yml
+++ b/source/_data/云游四海.yml
@@ -1,15 +1,15 @@
 - name: 阿里云 AliYun
   url: https://homenew.console.aliyun.com/
   img: https://homenew.console.aliyun.com/favicon.ico
-  description: 阿里云--国内顶级的云服务厂商,应有尽有
+  description: 阿里云--国内顶级的云服务厂商
 - name: 腾讯云 TecentCloud
   url: https://console.cloud.tencent.com/
   img: https://console.cloud.tencent.com/favicon.ico
-  description: 腾讯云--国内顶级的云服务厂商,应有尽有
-- name: Vercel Vercel
+  description: 腾讯云--国内顶级的云服务厂商
+- name: Vercel
   url: https://vercel.com/
-  img: https://vercel.com/favicon.ico
-  description: vercel--超强大的免费站点托管平台
+  img: https://assets.vercel.com/image/upload/q_auto/front/favicon/vercel/57x57.png
+  description: vercel--一个强大的免费站点托管平台
 - name: hax肉鸡 hax
   url: https://hax.co.id/
   img: https://hax.co.id/img/favicon.png
