--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 61nav
-description: ''
-keywords:
-author: Leslie
+title: Salute
+subtitle:
+description: Be Yourself
+keywords: "do something"
+author: LY
 language: zh-CN
-timezone: ''
+timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://nav.salute61.top/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
